# myfav

./: .devenv.flake.nix  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.devenv/: bash  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link  shell-2-link
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/fav-cli/: Cargo.toml
crates/fav-cli/src/: main.rs
crates/fav-core/: Cargo.toml
crates/fav-core/src/: lib.rs
crates/fav-output/: Cargo.toml
crates/fav-output/src/: lib.rs
crates/myfav/: Cargo.toml
crates/myfav-cli/: Cargo.toml
crates/myfav-cli/src/: git.rs  handlers.rs  main.rs
crates/myfav-core/: Cargo.toml
crates/myfav-core/src/: lib.rs
crates/myfav-output/: Cargo.toml
crates/myfav-output/src/: lib.rs
crates/myfav/src/: args.rs  git.rs  handlers.rs  main.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs
