[package]
name = "myfav-core"
version = "0.2.0"
edition = "2021"
authors = ["Pedro Brantes <contact@brantes.simplelogin.com>"]
description = "Core domain models and repository logic for myfav."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrobrantes/myfav"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
