[package]
name = "myfav"
version = "0.2.0"
edition = "2021"
authors = ["Pedro Brantes <contact@brantes.simplelogin.com>"]
description = "A simple Rust CLI to manage and distribute your favorites/recommendations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrobrantes/myfav"
keywords = ["cli", "favorites", "recommendations", "json", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
myfav-core = { path = "../myfav-core", version = "0.2.0" }
myfav-output = { path = "../myfav-output", version = "0.2.0" }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
