[package]
name = "myfav-output"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Brantes <contact@brantes.simplelogin.com>"]
description = "Formatting and distribution logic for myfav."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrobrantes/myfav"

[dependencies]
myfav-core = { path = "../core", version = "0.1.0" }
anyhow = "1.0.102"
serde_json = "1.0.149"
